--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>golden-area</title>
+  <title>精品台区智能管控系统</title>
   <script  src="http://maps.google.cn/maps/api/js?region=cn&language=zh-CN&key=AIzaSyCygda1IoIMwrZjiMoD49lPyKaY1qCIH5Y"></script>
   <style>
     html,
     body {
-      width: 100%;
-      height: 100%;
+      width: 1920px;
+      height: 1080px;
     }
   </style>
 </head>
